--- a/Dynamic Animation Game/Base.lproj/Main.storyboard
+++ b/Dynamic Animation Game/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,26 +15,26 @@
                         <viewControllerLayoutGuide type="bottom" id="Sl4-gg-Z0b"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="UFr-uE-YQF">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KbQ-vZ-OYK">
-                                <rect key="frame" x="277" y="228" width="46" height="30"/>
+                                <rect key="frame" x="184" y="296" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <segue destination="vXZ-lx-hvc" kind="show" id="t4Q-mP-RJW"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g29-AE-4Dg">
-                                <rect key="frame" x="277" y="304" width="46" height="30"/>
+                                <rect key="frame" x="184" y="372" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ihn-Yo-1uH">
-                                <rect key="frame" x="277" y="342" width="46" height="30"/>
+                                <rect key="frame" x="184" y="410" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="12112176_10206698064403695_8578646068651079107_n.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="AW4-7l-LXH">
-                                <rect key="frame" x="184" y="28" width="232" height="183"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="12112176_10206698064403695_8578646068651079107_n.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="AW4-7l-LXH">
+                                <rect key="frame" x="96" y="20" width="223" height="200"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
                         </subviews>
@@ -41,12 +42,17 @@
                         <constraints>
                             <constraint firstItem="g29-AE-4Dg" firstAttribute="centerX" secondItem="UFr-uE-YQF" secondAttribute="centerX" id="2Jy-nt-wiD"/>
                             <constraint firstItem="g29-AE-4Dg" firstAttribute="leading" secondItem="KbQ-vZ-OYK" secondAttribute="leading" id="4Ib-9g-CtZ"/>
+                            <constraint firstItem="KbQ-vZ-OYK" firstAttribute="top" secondItem="AW4-7l-LXH" secondAttribute="bottom" constant="76" id="7N9-ss-z99"/>
                             <constraint firstItem="Ihn-Yo-1uH" firstAttribute="top" secondItem="g29-AE-4Dg" secondAttribute="bottom" constant="8" symbolic="YES" id="AoR-Il-Z59"/>
+                            <constraint firstItem="AW4-7l-LXH" firstAttribute="leading" secondItem="UFr-uE-YQF" secondAttribute="leadingMargin" constant="76" id="B4L-YM-qJ1"/>
                             <constraint firstItem="g29-AE-4Dg" firstAttribute="top" secondItem="KbQ-vZ-OYK" secondAttribute="bottom" constant="46" id="Suu-Az-nMx"/>
-                            <constraint firstItem="KbQ-vZ-OYK" firstAttribute="top" secondItem="WAk-s7-JuV" secondAttribute="bottom" constant="208" id="dNh-Dq-dl6"/>
+                            <constraint firstItem="AW4-7l-LXH" firstAttribute="centerX" secondItem="g29-AE-4Dg" secondAttribute="centerX" id="TLg-oE-882"/>
+                            <constraint firstItem="KbQ-vZ-OYK" firstAttribute="top" secondItem="WAk-s7-JuV" secondAttribute="bottom" constant="276" id="dNh-Dq-dl6"/>
                             <constraint firstItem="g29-AE-4Dg" firstAttribute="leading" secondItem="Ihn-Yo-1uH" secondAttribute="leading" id="iHd-wL-WHQ"/>
+                            <constraint firstItem="AW4-7l-LXH" firstAttribute="top" secondItem="WAk-s7-JuV" secondAttribute="bottom" id="mqy-uJ-9Nu"/>
                         </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hah-OL-uO9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -61,13 +67,31 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PQo-Wz-Ffg">
+                                <rect key="frame" x="353" y="72" width="41" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="Ph1-dD-b2p"/>
+                                    <constraint firstAttribute="width" constant="41" id="nKq-YJ-PV9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="PQo-Wz-Ffg" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="0Kx-AL-Xcc"/>
+                            <constraint firstItem="PQo-Wz-Ffg" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="SGa-mZ-jkq"/>
+                            <constraint firstItem="PQo-Wz-Ffg" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="52" id="cQu-Ti-1xx"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="backgroundView" destination="kh9-bI-dsS" id="O7M-KD-6w5"/>
+                        <outlet property="score" destination="PQo-Wz-Ffg" id="VpF-qY-krh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
